--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Montserrat:wght@200;400;500&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300&display=swap');
+
+* {
+  font-family: Montserrat !important;
+}
+
 .App {
   text-align: center;
 }
@@ -32,32 +38,45 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
+
 /* styles.css */
 .carousel-image {
-  max-width: 50%;   /* Ensure the image doesn't exceed the slide width */
-  height: auto;      /* Automatically adjust the height to maintain the aspect ratio */
-  display: block;    /* Make the image a block-level element */
-  margin: 0 auto;    /* Center the image horizontally */
+  max-width: 50%;
+  /* Ensure the image doesn't exceed the slide width */
+  height: auto;
+  /* Automatically adjust the height to maintain the aspect ratio */
+  display: block;
+  /* Make the image a block-level element */
+  margin: 0 auto;
+  /* Center the image horizontally */
 }
 
 .divider {
   width: 50%;
-  height: 2px; /* Adjust the height of the divider */
-  display: block;    /* Make the image a block-level element */
-  margin: 0 auto; 
-  background-color: #000; /* Adjust the background color of the divider */
+  height: 2px;
+  /* Adjust the height of the divider */
+  display: block;
+  /* Make the image a block-level element */
+  margin: 0 auto;
+  background-color: #000;
+  /* Adjust the background color of the divider */
 }
 
 /* styles.css */
 .custom-font {
-  font-family: gotu; /* Replace 'YourFontName' with your desired font */
-  font-size: 16px; /* Set the font size to your preference */
-  font-weight: 700; /* Set the font weight (e.g., 700 for bold) */
-  color: #333; /* Set the font color to your preference */
+  font-family: gotu;
+  /* Replace 'YourFontName' with your desired font */
+  font-size: 16px;
+  /* Set the font size to your preference */
+  font-weight: 700;
+  /* Set the font weight (e.g., 700 for bold) */
+  color: #333;
+  /* Set the font color to your preference */
 }
 
 /* LOGIN MODAL CSS */
@@ -76,4 +95,3 @@
   color: #fff;
   border: none;
 }
-
